--- a/pkg/kamailio/obs/kamailio.service
+++ b/pkg/kamailio/obs/kamailio.service
@@ -7,6 +7,9 @@ After=network-online.target
 Type=simple
 User=kamailio
 Group=kamailio
+StateDirectory=kamailio
+RuntimeDirectory=kamailio
+RuntimeDirectoryPreserve=true
 Environment='CFGFILE=/etc/kamailio/kamailio.cfg'
 Environment='SHM_MEMORY=64'
 Environment='PKG_MEMORY=8'
